# alertini

./: README.md
alertini-backend/: .env.example  Cargo.toml  compose.yml
alertini-backend/migrations/2026-05-22-171928-0000_create_users/: up.sql
alertini-backend/migrations/2026-05-24-112754-0000_create_vehicles/: up.sql
alertini-backend/migrations/2026-05-30-182817-0000_create_alerts/: down.sql  up.sql
alertini-backend/src/: db.rs  main.rs  schema.rs
alertini-backend/src/api/: alert_controller.rs  auth_controller.rs  health_controller.rs  mod.rs  vehicle_controller.rs
alertini-backend/src/common/: claims.rs  mod.rs
alertini-backend/src/common/addons/: mod.rs  utoipa_auth_addon.rs
alertini-backend/src/middleware/: auth_middleware.rs
alertini-backend/src/models/: alert.rs  mod.rs  user.rs  vehicle.rs
alertini-backend/src/responses/: api_response.rs
alertini-frontend/: .env.example  package.json  pnpm-lock.yaml
alertini-frontend/app/components/: AlertManager.tsx  LoginForm.tsx  RegisterForm.tsx  VehicleManager.tsx
alertini-frontend/app/routes/: home.tsx
alertini-frontend/app/stores/: auth-store.ts  vehicle-store.ts
