[package]
name = "alertini-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
