[package]
name = "alertini-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
dashmap = "6.2.1"
tower-http = { version = "0.6.11", features = ["cors"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "macros", "uuid", "chrono"] }
utoipa-swagger-ui = {version = "9.0.2", features = ["axum"]}
utoipauto = "0.3.0-alpha.2"
diesel_migrations = "2.3.2"
